# image-test

./: Fixierblock_20250715.stl  README.md  docker-compose.yaml  pyproject.toml
configs/: nomad.yaml
tests/: docker-compose.yml  nomad.yaml
